--- a/config.json
+++ b/config.json
@@ -14,9 +14,9 @@
     "eventDisabled": [],
     "autoClean": true,
     "ACCESSTOKEN": "",
-    "BOTNAME": "Lương Trường Khôi",
-    "AMDIN_NAME": "Có lỗi báo mình fix qua link bên dưới:",
-    "FACEBOOK_ADMIN": "https://www.facebook.com/100018277053087",
+    "BOTNAME": "Deep Sea Dream🌊",
+    "AMDIN_NAME": "Owen",
+    "FACEBOOK_ADMIN": "https://www.facebook.com/61578017301300",
     "PREFIX": "/",
     "ADMINBOT": [
         "61578017301300"
