--- a/config.json
+++ b/config.json
@@ -14,6 +14,9 @@
     "eventDisabled": [],
     "autoClean": true,
     "ACCESSTOKEN": "",
+    "EMAIL": "owenknight301@gmail.com",
+    "PASSWORD": "dthinh210@",
+    "OTPKEY": "",
     "BOTNAME": "Deep Sea Dream🌊",
     "AMDIN_NAME": "Owen",
     "FACEBOOK_ADMIN": "https://www.facebook.com/61578017301300",
